--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -11,6 +11,7 @@
 
           <li class="nav-item"></li>
             <a class="nav-link active" aria-current="page" href="/home"><i class="fa-solid fa-large fa-house-laptop"></i> Home</a>
+            <p>This is my home page where I run my things</p>
           </li>
 
 
