--- a/views/partials/bottom_nav.ejs
+++ b/views/partials/bottom_nav.ejs
@@ -1,8 +1,8 @@
   <!-- Bottom Row -->
   <footer>
-    <nav class="navbar fixed-bottom navbar-dark bg-dark">
+    <nav class="navbar fixed-bottom navbar-dark bg-light">
       <div class="container-fluid">
-        <h6 class="display-8 navbar-text">&copy;Copyright 2022 All Rights reserved.</h6>
+        <p style="position: fixed;bottom: 0; width: 100%" class="text-center">&copy;Copyright <%= new Date().getFullYear();%>. Oduneye Adekunle Comp229 </p>
       </div>
     </nav>
   </footer>
