--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -1,7 +1,8 @@
   <!-- Main Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">COMP229</a>
+      <a class="navbar-brand" href="/"><img src="Assets/images/aj.png" width="50px" 
+        height="50px" alt="aj"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -10,17 +11,15 @@
         <ul class="navbar-nav ml-auto">
 
           <li class="nav-item"></li>
-            <a class="nav-link active" aria-current="page" href="/home"><i class="fa-solid fa-large fa-house-laptop"></i> Home</a>
-            <p>This is my home page where I run my things</p>
+            <a class="nav-link" href="/home"><i class="fa-solid fa-large fa-house-laptop"></i> Home</a>
           </li>
-
 
           <li class="nav-item" >
             <a class="nav-link" href="/about"><i class="fa-solid fa-circle-info"></i> About</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/products"><i class="fa-brands fa-elementor"></i> Products</a>
+            <a class="nav-link" href="/projects"><i class="fa-brands fa-elementor"></i> Projects</a>
           </li>
 
           <li class="nav-item">
@@ -34,3 +33,4 @@
       </div>
     </div>
   </nav>
+  
