updated links on home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,8 @@
             <h3>Navigator</h3>
             <ul>
                 <p><a href="about">A little about me</a></p>
-                <p><a href="project">My projects</a></p>
-                <p><a href="service">My skills</a></p>
+                <p><a href="projects">My projects</a></p>
+                <p><a href="services">My skills</a></p>
                 <p><a href="contact">Lets work together</a></p>
             </ul>
             <h3>Mission Statement</h3>
