Edited About page narrative

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,8 +11,7 @@
             <h2>About Me</h2>
             <img src="Assets/images/Me.jpg" width="250px" height="200px" alt="Adekunle Oduneye"></a>
             <p>I am <%=names.myName%></p>
-            <h3>Mission Statement</h3>
-            <p>Dedicated IT Support Professional with strong passion and experience for developing and support to end users and supporting software application. I am plagued with active learning of software debvelopment and Cloud technologies such as AWS, Microsoft Azure, and GCP.</p>
+            <p>Dedicated IT Support Professional with strong passion and experience for developing and providing support for supporting software applications. I am plagued with active learning of software debvelopment and Cloud technologies such as AWS, Microsoft Azure, and GCP.</p>
         </div>
     </div>
   </main>
