Link portfolio project website

--- a/views/project.ejs
+++ b/views/project.ejs
@@ -54,7 +54,7 @@
                                         <p>I designed a portfolio website to show case my app development skilss</p>
                                     </td>
                                     <td>
-                                        <a href="property3.html"><img src="Assets/images/website.jpg" width="100px" height="80px" alt="Website"></a>
+                                        <a href="https://ade-comp229-assignment.herokuapp.com/home"><img src="Assets/images/website.jpg" width="100px" height="80px" alt="Website"></a>
                                         <br>
                                     </td>
                                 </tr>
